--- a/data/settings.json
+++ b/data/settings.json
@@ -1,21 +1,21 @@
 {
   "organizer": {
-    "name": "GDG Lviv",
-    "twitter": "gdglviv",
-    "blog": "https://medium.com/gdg-lviv",
-    "url": "http://lviv.gdg.org.ua/"
+    "name": "GDG",
+    "twitter": "#",
+    "blog": "/blog",
+    "url": "https://www.meetup.com/GDG-Sofia/"
   },
-  "startDate": "2017-10-013T09:00:00+03:00",
-  "endDate": "2017-10-14T19:00:00+03:00",
+  "startDate": "2018-11-23T08:30:00+02:00",
+  "endDate": "2018-11-24T20:00:00+02:00",
   "webapp": {
-    "shortName": "DevFest",
+    "shortName": "DevFest Sofia 2018",
     "themeColor": "#673AB7",
     "backgroundColor": "#673AB7"
   },
   "dateFormat": {
     "locale": "en-US"
   },
-  "hashtag": "DevFest17",
+  "hashtag": "DevFest Sofia 2018",
   "disabledSchedule": false,
   "showSessionShortAbstract": true,
   "navigation": [
@@ -38,19 +38,14 @@
       "route": "team",
       "permalink": "/team/",
       "label": "Team"
-    },
-    {
-      "route": "blog",
-      "permalink": "/blog/",
-      "label": "Blog"
     }
   ],
   "heroSettings": {
     "home": {
-      "description": "Be a hero. Be a GDG!",
+      "description": "DevFest is the biggest Google Developers Group event happening around the globe, focused on community building and learning about Google technologies.",
       "background": {
         "color": "#673ab7",
-        "image": "/images/backgrounds/home.jpg"
+        "image": "/images/DevFest.png"
       },
       "fontColor": "#FFF"
     },
@@ -114,20 +109,20 @@
   },
   "location": {
     "label": "Location",
-    "name": "Planeta kino",
-    "city": "Lviv",
-    "short": "Lviv, Ukraine",
-    "address": "36 Shchyretska St, Lviv, Ukraine",
+    "name": "Sofia",
+    "city": "Sofia",
+    "short": "Sofia, Bulgaria",
+    "address": "NDK (National Palace of Culture)",
     "pointer": {
-      "latitude": 49.809841,
-      "longitude": 23.972805,
-      "zoom": 5
+      "latitude": 42.684868,
+      "longitude": 23.318950,
+      "zoom": 6
     },
     "mapCenter": {
-      "latitude": 48,
-      "longitude": 8
+      "latitude": 42.684868,
+      "longitude": 23.318950
     },
-    "description": "Newly built Pivdennyi Expo is a long-awaited exhibition center in Lviv, which can fulfill the needs of the large-scale event"
+    "description": "The National Palace of Culture (Национален дворец на културата, Natsionalen dvorets na kulturata; abbreviated as НДК, NDK), located in Sofia, the capital of Bulgaria, is the largest, multifunctional conference and exhibition centre in south-eastern Europe."
   },
   "mediaQueries": {
     "xs": {
@@ -148,24 +143,12 @@
   "socialNetwork": {
     "follow": [
       {
-        "name": "meetup",
-        "url": "https://www.meetup.com/GDG-Lviv/events/244342635/"
-      },
-      {
         "name": "facebook",
-        "url": "https://www.facebook.com/devfest.ukraine/"
-      },
+        "url": "https://www.facebook.com/events/386278951907136/"
+      }, 
       {
-        "name": "twitter",
-        "url": "https://twitter.com/devfest_ukraine/"
-      },
-      {
-        "name": "instagram",
-        "url": "https://www.instagram.com/devfestukraine"
-      },
-      {
-        "name": "youtube",
-        "url": "https://www.youtube.com/playlist?list=PLt8lEzcLNl31AouwDkbLbLARlQFwNS2en"
+        "name": "meetup",
+        "url": "https://www.meetup.com/GDG-Sofia/events/254172057/"
       }
     ],
     "share": [
@@ -183,7 +166,7 @@
       }
     ]
   },
-  "mailto": "devfest@gdg.org.ua",
+  "mailto": "gdgsofia@gmail.com",
   "mailchimp": {
     "url": "https://gdg.us11.list-manage.com/subscribe/post?u=b7e853a79164ddfdbda3ed77b&amp;id=7993e39fbe",
     "name": "b_b7e853a79164ddfdbda3ed77b_7993e39fbe"
@@ -199,17 +182,11 @@
         "name": "facebook",
         "label": "Sign in with Facebook",
         "url": "https://www.facebook.com"
-      },
-      {
-        "name": "twitter",
-        "label": "Sign in with Twitter",
-        "url": "https://twitter.com"
       }
     ],
     "allowedProvidersUrl": [
       "https://accounts.google.com",
-      "https://www.facebook.com",
-      "https://twitter.com"
+      "https://www.facebook.com"
     ]
   },
   "contentLoaders": {
