Reducing short name to pass PWA check

--- a/data/settings.json
+++ b/data/settings.json
@@ -8,7 +8,7 @@
   "startDate": "2018-11-23T08:30:00+02:00",
   "endDate": "2018-11-24T20:00:00+02:00",
   "webapp": {
-    "shortName": "DevFest Sofia 2018",
+    "shortName": "DevFest BG",
     "themeColor": "#673AB7",
     "backgroundColor": "#673AB7"
   },
