--- a/data/settings.json
+++ b/data/settings.json
@@ -45,7 +45,7 @@
       "description": "DevFest is the biggest Google Developers Group event happening around the globe, focused on community building and learning about Google technologies.",
       "background": {
         "color": "#673ab7",
-        "image": "/images/DevFest.png"
+        "image": "/images/DevFest2019.png"
       },
       "fontColor": "#FFF"
     },
