Add tracks info

--- a/docs/default-firebase-data.json
+++ b/docs/default-firebase-data.json
@@ -88,7 +88,7 @@
       },
       {
         "order": 3,
-        "logoUrl": "https://firebasestorage.googleapis.com/v0/b/dev-fest-sofia-2019.appspot.com/o/partners%2Fdevexperts-logo.png?alt=media&token=4cacb360-8328-4b6e-adbf-e3ac72cf7fdb",
+        "logoUrl": "https://firebasestorage.googleapis.com/v0/b/dev-fest-sofia-2019.appspot.com/o/partners%2Fdevexperts-orange.png?alt=media&token=dcac10c1-7553-4875-8544-96f907a9b46c",
         "name": "Devexperts",
         "url": "https://devexperts.com"
       },
