--- a/data/settings.json
+++ b/data/settings.json
@@ -1,12 +1,12 @@
 {
   "organizer": {
     "name": "GDG",
-    "twitter": "#",
+    "twitter": "gdg_sofia",
     "blog": "/blog",
     "url": "https://www.meetup.com/GDG-Sofia/"
   },
-  "startDate": "2018-11-23T08:30:00+02:00",
-  "endDate": "2018-11-24T20:00:00+02:00",
+  "startDate": "2019-10-05T08:30:00+02:00",
+  "endDate": "2019-10-05T21:00:00+02:00",
   "webapp": {
     "shortName": "DevFest BG",
     "themeColor": "#673AB7",
@@ -15,7 +15,7 @@
   "dateFormat": {
     "locale": "en-US"
   },
-  "hashtag": "DevFest Sofia 2018",
+  "hashtag": "DevFest Sofia 2019",
   "disabledSchedule": false,
   "showSessionShortAbstract": true,
   "navigation": [
@@ -168,18 +168,14 @@
     "follow": [
       {
         "name": "facebook",
-        "url": "https://www.facebook.com/events/386278951907136/"
+        "url": "https://www.facebook.com/events/637782733385598/"
       },
       {
         "name": "meetup",
-        "url": "https://www.meetup.com/GDG-Sofia/events/254172057/"
+        "url": "https://www.meetup.com/GDG-Sofia/events/263421419/"
       }
     ],
     "share": [
-      {
-        "name": "gplus",
-        "url": "https://plus.google.com/share?url="
-      },
       {
         "name": "facebook",
         "url": "https://www.facebook.com/sharer.php?u="
