--- a/docs/default-firebase-data.json
+++ b/docs/default-firebase-data.json
@@ -114,8 +114,8 @@
       "title": "Gold Sponsors"
     }],
   "schedule": {
-    "2016-09-10": {
-      "dateReadable": "September 10",
+    "2019-10-05": {
+      "dateReadable": "October 5",
       "timeslots": [{
         "endTime": "10:00",
         "sessions": [{
@@ -261,9 +261,11 @@
       "title": "Lecture 3"
     },
     "108": {
-      "description": "Lecture 4.",
+      "description": "Using Kotlin for JS Client and JVM Server",
       "language": "English",
-      "title": "Lecture 4"
+      "title": "Using Kotlin for JS Client and JVM Server",
+      "speakers": ["alexander_podkhalyuzin"],
+      "tags": ["Kotlin", "Kotlin Everywhere", "Javascript"]
     },
     "109": {
       "description": "Lunch.",
@@ -335,17 +337,31 @@
   },
   "speakers": {
     "stanimira_vlaeva": {
-      "bio": " Stanimira is a developer advocate on the NativeScript team at Progress, Google Developer Expert for Angular and Web Technologies, and co-organizer of the Angular Sofia meetup. For the past three years she has been working on the integration between NativeScript and Angular, NativeScript schematics, the web and mobile code-sharing story, hot module replacement and the webpack performance optimization tricks (hacks).",
+      "badges": [{"description": "Angular Google Developer Expert", "link": "https://google-developers.appspot.com/community/experts/directory/profile/profile-stanimira_vlaeva", "name": "gde"}],
+      "bio": "Stanimira is a developer advocate on the NativeScript team at Progress, Google Developer Expert for Angular and Web Technologies, and co-organizer of the Angular Sofia meetup. For the past three years she has been working on the integration between NativeScript and Angular, NativeScript schematics, the web and mobile code-sharing story, hot module replacement and the webpack performance optimization tricks (hacks).",
       "company": "Progress Software",
       "country": "Bulgaria",
       "featured": true,
       "name": "Stanimira Vlaeva",
       "photo": "gs://dev-fest-sofia-2019.appspot.com/speakers/StanimiraVlaeva.jpg",
       "photoUrl": "https://firebasestorage.googleapis.com/v0/b/dev-fest-sofia-2019.appspot.com/o/speakers%2FStanimiraVlaeva.jpg?alt=media&token=9431bee4-865b-4984-8e5e-163e683287dd",
-      "shortBio": "Stanimira is a developer advocate on the NativeScript team at Progress, Google Developer Expert for Angular and Web Technologies, and co-organizer of the Angular Sofia meetup.",
+      "shortBio": "Developer advocate on the NativeScript team at Progress, Google Developer Expert for Angular and Web Technologies, and co-organizer of the Angular Sofia meetup.",
+      "socials": [],
+      "order": 1,
+      "title": "Developer Advocate"
+    },
+    "alexander_podkhalyuzin": {
+      "bio": "Alexander Podkhalyuzin is Kotlin IDE team lead. He joined Kotlin team just few years ago as Kotlin/Native tooling lead then general Kotlin IDE, before that he was responsible for Scala plugin for IntelliJ IDEA for nine years. so complicated stuff like Kotlin/Native and Kotlin/Multiplatform cannot scary him, especially with math education around mathematical physics and probability theory. Worked for five years teaching Scala in Academic University. Father of three kids and founder of few educational centers for children in St. Petersburg.",
+      "company": "JetBrains",
+      "country": "St. Petersburg, Russia",
+      "featured": true,
+      "name": "Alexander Podkhalyuzin",
+      "photo": "gs://dev-fest-sofia-2019.appspot.com/speakers/alexander-podkhalyuzin-safela.png",
+      "photoUrl": "https://firebasestorage.googleapis.com/v0/b/dev-fest-sofia-2019.appspot.com/o/speakers%2Falexander-podkhalyuzin-safela.png?alt=media&token=fb9bf988-a8b5-448b-9207-83c32d328fe6",
+      "shortBio": "Kotlin IDE team lead. He joined Kotlin team few years ago, before that he was responsible for Scala plugin for IntelliJ IDEA for nine years.",
       "socials": [],
       "order": 0,
-      "title": "Developer Advocate"
+      "title": "Kotlin IDE team lead"
     }
   },
   "team": [{
@@ -419,59 +435,26 @@
   }],
   "tickets": [{
     "available": true,
-    "currency": "$",
-    "ends": "Oct 13",
-    "info": "Requires valid student/lecturer ID",
-    "name": "EDU",
-    "price": 80,
+    "currency": "BGN",
+    "ends": "Aug 31",
+    "info": "The initial portion of tickets at cheaper price",
+    "name": "Early bird",
+    "price": 76,
     "soldOut": false,
-    "starts": "Feb 7",
-    "url": "https://2event.com/events/1027108"
+    "starts": "Aug 19",
+    "url": "https://event.gg/13150/"
   }, {
     "available": false,
-    "currency": "$",
-    "ends": "Mar 31",
-    "inDemand": false,
-    "info": "Or first 50 tickets",
-    "name": "Pre Early Bird",
-    "price": 100,
-    "regular": true,
-    "soldOut": true,
-    "starts": "Feb 7",
-    "url": "https://2event.com/events/1027108"
-  }, {
-    "available": true,
-    "currency": "$",
-    "ends": "Jun 30",
-    "inDemand": true,
-    "info": "Or first 200 tickets",
-    "name": "Early Bird",
-    "price": 120,
-    "regular": true,
-    "soldOut": false,
-    "starts": "Feb 7",
-    "url": "https://2event.com/events/1027108"
-  }, {
-    "available": false,
-    "currency": "$",
+    "currency": "BGN",
     "ends": "Sep 30",
     "inDemand": false,
-    "info": "Or first 350 tickets",
-    "name": "Regular",
-    "price": 160,
-    "primary": true,
+    "info": "Ordinary tickets",
+    "name": "General Admission",
+    "price": 96,
     "regular": true,
     "soldOut": false,
-    "starts": "Jul 1",
-    "url": "https://2event.com/events/1027108"
-  }, {
-    "available": true,
-    "currency": "$",
-    "info": "Money worth nothing when you love it",
-    "name": "I Love DFUA",
-    "price": 280,
-    "soldOut": false,
-    "url": "https://2event.com/events/1027108"
+    "starts": "Sep 1",
+    "url": "https://event.gg/13150/"
   }],
   "triggers": {
     "images": false
@@ -479,118 +462,23 @@
   "videos": [{
     "speakers": "DevFest",
     "thumbnail": "https://firebasestorage.googleapis.com/v0/b/dev-fest-sofia-2019.appspot.com/o/gallery%2Fgdg-devfest-globe.png?alt=media&token=2f408c6b-0277-4747-aa95-33417b59a251",
-    "title": "Welcome to DevFest 2018!",
-    "youtubeId": "CKvi3sT3gU8"
+    "title": "DevFest 2018 - see how it was!",
+    "youtubeId": "WZ1tZxLdVjA"
   }, {
-    "speakers": "Yonatan Levin",
-    "thumbnail": "https://firebasestorage.googleapis.com/v0/b/hoverboard-firebase.appspot.com/o/images%2Fsessions%2F2017%2FGDG-(65).jpg?alt=media&token=f25f04cf-9a10-42ed-b2ff-e41fad910c39",
-    "title": "Making mistakes and building products from 1st to 30M users",
-    "youtubeId": "hUY8jg9-ieE"
+    "speakers": "Ignacy Kowalczyk",
+    "thumbnail": "https://firebasestorage.googleapis.com/v0/b/dev-fest-sofia-2019.appspot.com/o/gallery%2F47395232_1242215385919119_5659180189179969536_o.jpg?alt=media&token=6ff32fe1-7111-459a-b0a3-fe6f94e32773",
+    "title": "Cloud Native - effective computing at scale",
+    "youtubeId": "VnoLuBLh4U0"
   }, {
-    "speakers": "Britt Barak",
-    "thumbnail": "https://firebasestorage.googleapis.com/v0/b/hoverboard-firebase.appspot.com/o/images%2Fsessions%2F2017%2FGDG-(92).jpg?alt=media&token=0dfc3002-6d6e-4e9f-8518-5941fc501a04",
-    "title": "When your app is asleep",
-    "youtubeId": "D6WEL_inXxk"
+    "speakers": "Iiro Krankka",
+    "thumbnail": "https://firebasestorage.googleapis.com/v0/b/dev-fest-sofia-2019.appspot.com/o/gallery%2Fiiro.jpg?alt=media&token=3aa29cf5-2ea2-492d-91b1-b865159ad1cf",
+    "title": "Achieving next-level code between Flutter and the Mobile Web",
+    "youtubeId": "LrX090dLZ9k"
   }, {
-    "speakers": "Asim Hussain",
-    "thumbnail": "https://firebasestorage.googleapis.com/v0/b/hoverboard-firebase.appspot.com/o/images%2Fsessions%2F2017%2FGDG-(173).jpg?alt=media&token=779549b7-6578-4092-9e32-7785fff270c5",
-    "title": "How to hack a node app?",
-    "youtubeId": "iN92OsbtgGI"
-  }, {
-    "speakers": "Marcos Placona",
-    "thumbnail": "https://firebasestorage.googleapis.com/v0/b/hoverboard-firebase.appspot.com/o/images%2Fsessions%2F2017%2FGDG-(186).jpg?alt=media&token=54b241f6-b1d4-4357-b5a3-05e00ed55814",
-    "title": "I just hacked your app!",
-    "youtubeId": "GrLYrJ-aNSE"
-  }, {
-    "speakers": "Mateusz Herych",
-    "thumbnail": "https://firebasestorage.googleapis.com/v0/b/hoverboard-firebase.appspot.com/o/images%2Fsessions%2F2017%2FGDG-(238).jpg?alt=media&token=805c0d09-95ed-4d8b-8b87-85f3c4c5f427",
-    "title": "Release Android apps globally with no headache and minimum stress",
-    "youtubeId": "OhcJqVEnc7I"
-  }, {
-    "speakers": "Shmuela Jacobs",
-    "thumbnail": "https://firebasestorage.googleapis.com/v0/b/hoverboard-firebase.appspot.com/o/images%2Fsessions%2F2017%2FGDG-(271).jpg?alt=media&token=dfbf87f8-5a72-44cd-b2b1-3388b65ffebb",
-    "title": "Web goes Native: Progressive Web Apps with Angular",
-    "youtubeId": "OcIZS4jNgP0"
-  }, {
-    "speakers": "Martin Splitt",
-    "thumbnail": "https://firebasestorage.googleapis.com/v0/b/hoverboard-firebase.appspot.com/o/images%2Fsessions%2F2017%2FGDG-(81).jpg?alt=media&token=3ff4ca98-5b27-4253-a0ae-e740b6dc45a3",
-    "title": "A look at the guts of Polymer 2.0",
-    "youtubeId": "tRdx6Q5x3Fw"
-  }, {
-    "speakers": "Mete Atamel",
-    "thumbnail": "https://firebasestorage.googleapis.com/v0/b/hoverboard-firebase.appspot.com/o/images%2Fsessions%2F2017%2FGDG-(197).jpg?alt=media&token=83227977-a290-4816-875f-67b71586111e",
-    "title": "Apache Beam and Google Cloud DataFlow",
-    "youtubeId": "RxHijHZd0oM"
-  }, {
-    "speakers": "Dmitriy Novakovskiy",
-    "thumbnail": "https://firebasestorage.googleapis.com/v0/b/hoverboard-firebase.appspot.com/o/images%2Fsessions%2F2017%2FGDG-(169).jpg?alt=media&token=15f84e75-f070-4fe8-9d94-454bdf672bf9",
-    "title": "Google Cloud Spanner: Going global with relational database",
-    "youtubeId": "iGMjK8UY9gQ"
-  }, {
-    "speakers": "Jose Aguinaga",
-    "thumbnail": "https://firebasestorage.googleapis.com/v0/b/hoverboard-firebase.appspot.com/o/images%2Fsessions%2F2017%2FGDG-(213).jpg?alt=media&token=9b25ad9a-10d0-4887-8595-816662dc4402",
-    "title": "Buy my mixtape: the Payment Request API in action",
-    "youtubeId": "uDPRrmjmAD0a"
-  }, {
-    "speakers": "Denis Radin",
-    "thumbnail": "https://firebasestorage.googleapis.com/v0/b/hoverboard-firebase.appspot.com/o/images%2Fsessions%2F2017%2FGDG-(345).jpg?alt=media&token=f3e71338-c085-4fe7-b6cf-c7ef8212c930",
-    "title": "Applying NASA coding guidelines to JavaScript or airspace is closer than you may think",
-    "youtubeId": "E4fpZm17GNI"
-  }, {
-    "speakers": "Yonatan Levin",
-    "thumbnail": "https://firebasestorage.googleapis.com/v0/b/hoverboard-firebase.appspot.com/o/images%2Fsessions%2F2017%2FGDG-(369).jpg?alt=media&token=453207bd-cb21-41b6-a2e5-9da05273788d",
-    "title": "Architecture Components. The one that got away",
-    "youtubeId": "FzmDFscF41o"
-  }, {
-    "speakers": "Michael Pustovit",
-    "thumbnail": "https://firebasestorage.googleapis.com/v0/b/hoverboard-firebase.appspot.com/o/images%2Fsessions%2F2017%2FGDG-(377).jpg?alt=media&token=8c9ec397-1a38-4d7c-95ca-7d55f499eb37",
-    "title": "Gradle scripts in Kotlin: is it cool?",
-    "youtubeId": "XLNJkxWoCoc"
-  }, {
-    "speakers": "Yuliya Kaleda",
-    "thumbnail": "https://firebasestorage.googleapis.com/v0/b/hoverboard-firebase.appspot.com/o/images%2Fsessions%2F2017%2FGDG-(413).jpg?alt=media&token=b70b4a85-5634-4a83-8902-fa85cefb7113",
-    "title": "Make Your App Instant!",
-    "youtubeId": "v4RfZ0f_HVE"
-  }, {
-    "speakers": "Tim Messerschmidt",
-    "thumbnail": "https://firebasestorage.googleapis.com/v0/b/hoverboard-firebase.appspot.com/o/images%2Fsessions%2F2017%2FGDG-(350).jpg?alt=media&token=12f727f2-f9c8-4749-b76c-2da7a90cd3bb",
-    "title": "Hands-on Flutter",
-    "youtubeId": "0IY6J5baAj8"
-  }, {
-    "speakers": "Gerard Sans",
-    "thumbnail": "https://firebasestorage.googleapis.com/v0/b/hoverboard-firebase.appspot.com/o/images%2Fsessions%2F2017%2FGDG-(370).jpg?alt=media&token=d8627038-bb13-4e07-8e76-feca75e26086",
-    "title": "Reactive Animations Using Angular",
-    "youtubeId": "ij8kaavQ61Y"
-  }, {
-    "speakers": "Tom Wilkie",
-    "thumbnail": "https://firebasestorage.googleapis.com/v0/b/hoverboard-firebase.appspot.com/o/images%2Fsessions%2F2017%2FGDG-(352).jpg?alt=media&token=5656ddcc-6ff6-4846-9ef8-22bc0322a5de",
-    "title": "gRPC & Kubernetes",
-    "youtubeId": "YiWgWqOe_PI"
-  }, {
-    "speakers": "Mat Ryer",
-    "thumbnail": "https://firebasestorage.googleapis.com/v0/b/hoverboard-firebase.appspot.com/o/images%2Fsessions%2F2017%2FGDG-(363).jpg?alt=media&token=09ffdbc7-b717-49c8-abb8-3bae33552d14",
-    "title": "How I build APIs capable of gigantic scale in Go",
-    "youtubeId": "FkPqqakDeRY"
-  }, {
-    "speakers": "Juarez Filho",
-    "thumbnail": "https://firebasestorage.googleapis.com/v0/b/hoverboard-firebase.appspot.com/o/images%2Fsessions%2F2017%2FGDG-(383).jpg?alt=media&token=9aa8263d-e6b3-4141-83f9-17ef48409ec1",
-    "title": "Let Firebase help you to build better Front-end apps",
-    "youtubeId": "xJsgIH4U_DM"
-  }, {
-    "speakers": "Andrey Lipattsev",
-    "thumbnail": "https://firebasestorage.googleapis.com/v0/b/hoverboard-firebase.appspot.com/o/images%2Fsessions%2F2017%2FGDG-(412).jpg?alt=media&token=bf36bdf0-cea2-48a6-83e9-a3d6c3226f8f",
-    "title": "AMP in 2018. Still fast, still furious",
-    "youtubeId": "iPwlMr-j76w"
-  }, {
-    "speakers": "Ihor Dvoretskyi",
-    "thumbnail": "https://firebasestorage.googleapis.com/v0/b/hoverboard-firebase.appspot.com/o/images%2Fsessions%2F2017%2FGDG-(466).jpg?alt=media&token=76a822f9-9d82-4d5e-83ad-5e3f1593f2fe",
-    "title": "Welcome to the world of Open Source. Stories by Kubernetes contributor",
-    "youtubeId": "HhpHf3GefXI"
-  }, {
-    "speakers": "Joanna Chwastowska",
-    "thumbnail": "https://firebasestorage.googleapis.com/v0/b/hoverboard-firebase.appspot.com/o/images%2Fsessions%2F2017%2FGDG-(469).jpg?alt=media&token=80669b99-81f4-4d7d-8160-e0174da62b85",
-    "title": "100x impact - from an Individual Contributor to Technical Leader",
-    "youtubeId": "O1dtdDpQXU8"
+    "speakers": "Elaine Dias Batista",
+    "thumbnail": "https://firebasestorage.googleapis.com/v0/b/dev-fest-sofia-2019.appspot.com/o/gallery%2Fgdg-devfest-globe.png?alt=media&token=2f408c6b-0277-4747-aa95-33417b59a251",
+    "title": "Building assistive apps with App Actions",
+    "youtubeId": "Bl0nSWyojXE"
   }],
   "previousSpeakers": {
     "adrian_kajda": {
