--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy:prod": "cross-env BUILD_ENV=production gulp deploy",
     "firestore:init": "firebase firestore:delete -r --all-collections -y && firebase functions:config:set schedule.enabled=true && firebase deploy --except hosting && babel-node ./internals/import-default-data",
     "firestore:copy": "babel-node ./internals/firestore-copy-data",
+    "firestore:update": "babel-node ./internals/import-default-data",
     "postinstall": "bower install",
     "start": "gulp serve",
     "start:prod": "cross-env BUILD_ENV=production gulp serve",
