--- a/docs/default-firebase-data.json
+++ b/docs/default-firebase-data.json
@@ -319,9 +319,11 @@
       "title": "Lecture 10"
     },
     "118": {
-      "description": "Workshop 3.",
+      "description": "NativeScript opens up a whole new world for the Angular developers - a world where you can use your web skills to build mobile applications that run both on Android and iOS. But we can go even further - what if I told you can extend your existing web application with a shiny mobile app? It is true - Angular's platform agnostic nature allows you to reuse your business logic across multiple platforms. Come and see it for yourself! Together we'll transform an Angular website to a multi-platform application running on web, Android and iOS.",
       "language": "English",
-      "title": "Workshop 3"
+      "title": "From Web to Mobile with NativeScript and Angular",
+      "speakers": ["stanimira_vlaeva"],
+      "tags": ["JavaScript", "Angular", "NativeScript"]
     },
     "119": {
       "description": "Lecture 11.",
