speakers: set `featured` to `false` for all non-main track speakers

--- a/docs/default-firebase-data.json
+++ b/docs/default-firebase-data.json
@@ -357,7 +357,7 @@
       "bio": "Stanimira is a developer advocate on the NativeScript team at Progress, Google Developer Expert for Angular and Web Technologies, and co-organizer of the Angular Sofia meetup. For the past three years she has been working on the integration between NativeScript and Angular, NativeScript schematics, the web and mobile code-sharing story, hot module replacement and the webpack performance optimization tricks (hacks).",
       "company": "Progress Software",
       "country": "Sofia, Bulgaria",
-      "featured": true,
+      "featured": false,
       "name": "Stanimira Vlaeva",
       "photo": "gs://dev-fest-sofia-2019.appspot.com/speakers/StanimiraVlaeva.jpg",
       "photoUrl": "https://firebasestorage.googleapis.com/v0/b/dev-fest-sofia-2019.appspot.com/o/speakers%2FStanimiraVlaeva.jpg?alt=media&token=ae960bf8-ceb8-4297-9d03-7fdb7645279c",
@@ -411,7 +411,7 @@
       "bio": "By day a Java engineer at Falcon.io, by night a Kotlin enthusiast, dreaming of a world free of null pointer exceptions",
       "company": "Falcon.io",
       "country": "Sofia, Bulgaria",
-      "featured": true,
+      "featured": false,
       "name": "Viktor Penelski",
       "photo": "gs://dev-fest-sofia-2019.appspot.com/speakers/viktorpenelski.jpg",
       "photoUrl": "https://firebasestorage.googleapis.com/v0/b/dev-fest-sofia-2019.appspot.com/o/speakers%2Fviktorpenelski.jpg?alt=media&token=2da217f1-839d-4810-8850-97157c088715",
@@ -428,7 +428,7 @@
       "bio": "",
       "company": "Smule",
       "country": "Sofia, Bulgaria",
-      "featured": true,
+      "featured": false,
       "name": "Marian Zlatev",
       "photo": "gs://dev-fest-sofia-2019.appspot.com/speakers/marianzlatev.jpg",
       "photoUrl": "https://firebasestorage.googleapis.com/v0/b/dev-fest-sofia-2019.appspot.com/o/speakers%2Fmarianzlatev.jpg?alt=media&token=d57b8ecc-a0de-4f53-92b5-e55fd4535000",
@@ -445,7 +445,7 @@
       "bio": "Transpiling food and water to machine code",
       "company": "",
       "country": "Sofia, Bulgaria",
-      "featured": true,
+      "featured": false,
       "name": "Tom Mladenov",
       "photo": "gs://dev-fest-sofia-2019.appspot.com/team/Tom Mladenov.png",
       "photoUrl": "https://firebasestorage.googleapis.com/v0/b/dev-fest-sofia-2019.appspot.com/o/team%2FTom%20Mladenov.png?alt=media&token=8ae97ece-041f-4456-a77b-dcec7f1acdd6",
@@ -467,7 +467,7 @@
       "bio": "Experienced Software Engineer with strong interest in the technology development and high drive for novel projects. Most passionate about the Blockchain technology in its core and keen in its implementation in all operations of the economy.",
       "company": "",
       "country": "Sofia, Bulgaria",
-      "featured": true,
+      "featured": false,
       "name": "Vladimir Tasev",
       "photo": "gs://dev-fest-sofia-2019.appspot.com/speakers/Vladimir Tasev.jpg",
       "photoUrl": "https://firebasestorage.googleapis.com/v0/b/dev-fest-sofia-2019.appspot.com/o/speakers%2FVladimir%20Tasev.jpg?alt=media&token=dd89193d-1cd2-45ea-9db6-c33ad34ad952",
